# cca-f-study-agent

./: .gitignore  CLAUDE.md  README.md  README_en.md  pyproject.toml
.claude/: settings.json
00-meta/: domain-map.md  notebooklm-source-index.md  scenario-map.md  source-register.md
02-question-bank/seed/: sample-questions.jsonl
04-exam-runner/: attempt_schema.json  export_dashboard_data.py  question_schema.json  score_attempt.py  submit_attempt.py
05-learning-data/: lab-status.json
05-learning-data/attempts/: sample-attempt.json
06-dashboard/data/: dashboard-data.json
06-dashboard/static/: app.js  index.html  style.css
docs/: overview.html
docs/plans/: 2026-05-cca-f-study-runtime-mvp-plan.md
docs/reviews/: 2026-05-cca-f-study-runtime-mvp-final-validation.md
docs/specs/: 2026-05-cca-f-study-runtime-mvp.md
docs/use-cases/: cca-f-study-agent-loop.html  cca-f-study-use-cases.html
examples/attempts/: sample-answers.json
requirement/: 01-1차-설계.md  02-1차-설계-리뷰.md  03-1차-설계-리뷰-보완.md  04-구현-계획-및-프롬프트.md  05-kr-pdf-구조-차이-반영.md  06-kr-pdf-없이-선구현-계획.md
src/cca_f_study/: __init__.py  _aggregate.py  _scoring.py  export_dashboard_data.py  score_attempt.py  submit_attempt.py  (+1 more)
tests/: test_dashboard_data_byte_identical.py  test_end_to_end.py  test_export_coverage.py  test_export_dashboard_data.py  test_export_review_fixes.py  test_no_network_calls.py  test_no_pdf_runtime_dependency.py  test_review_findings.py  test_score_attempt.py  test_static_dashboard.py  test_submit_attempt.py  test_submit_attempt_coverage.py  test_validate_questions.py
(+17 files in other folders)
